conf/elk/ingestion/http.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elk-ingestion-http
  namespace: default
spec:
  selector:
    matchLabels:
      app: elk-ingestion-http
  template:
    metadata:
      labels:
        app: elk-ingestion-http
    spec:
      containers:
        - image: ghcr.io/punchplatform/punchline-java:8.1-dev
          name: java-engine
          volumeMounts:
            - name: punchline
              mountPath: "/data/punchline.yaml"
              subPath: punchline.yaml
          command: ["/bin/bash" , "start.sh", "/data/punchline.yaml"]
      volumes:
        - name: punchline
          configMap:
            name: elk-ingestion-http
